// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots SummaryTable should render a "no data" state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kGXeez ctOnEy"
    >
      <header
        className="sc-kpOJdX hlFKIM"
      >
        <h2
          className="sc-dxgOiQ isvEAp"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 600,
              }
            }
          >
            Performance
          </span>
        </h2>
      </header>
      <div
        className="sc-hSdWYo eaXZkb"
        id="js-dom-to-png-summary"
      >
        <div
          className="sc-htpNat klaPdF"
        >
          <div
            className="sc-bxivhb cRnhtv"
          >
            <div
              className="sc-ifAKCX kiQAin"
            />
            <h1
              className="sc-EHOje dWbWPz"
            >
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                There are no analytics for this date range
              </span>
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots SummaryTable should render a loading state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kGXeez ctOnEy"
    >
      <header
        className="sc-kpOJdX hlFKIM"
      >
        <h2
          className="sc-dxgOiQ isvEAp"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 600,
              }
            }
          >
            Performance
          </span>
        </h2>
      </header>
      <div
        className="sc-hSdWYo eaXZkb"
        id="js-dom-to-png-summary"
      >
        <div
          className="sc-bwzfXH dXsGsm"
        >
          <div
            className="sc-bdVaJa fsNrov"
          >
            <div
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "1rem",
                    "margin": "0 auto 1rem auto",
                    "position": "relative",
                    "width": "1rem",
                  }
                }
              >
                <span>
                  <div
                    style={
                      Object {
                        "height": "1rem",
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "top": 0,
                        "transition": "all 1000ms ease-in-out",
                        "width": "1rem",
                      }
                    }
                  >
                    <svg
                      height="100%"
                      style={
                        Object {
                          "fill": "#59626a",
                          "height": "1rem",
                          "width": "1rem",
                        }
                      }
                      version="1.1"
                      viewBox="0 0 16 16"
                      width="100%"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        className="shuttleGray"
                      >
                        <path
                          d="M1.10241622,4.34038738 L7.75166358,7.40469806 C7.88821853,7.46764349 8.11178147,7.46764349 8.24833642,7.40469806 L14.8975838,4.34038738 C15.0341387,4.27744195 15.0341387,4.17446518 14.8975838,4.11151975 L8.24833642,1.04720908 C8.11178147,0.984263641 7.88821853,0.984263641 7.75166358,1.04720908 L1.10241622,4.11151975 C0.965861261,4.17446518 0.965861261,4.27744195 1.10241622,4.34038738"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
              </div>
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                Loading...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots SummaryTable should render the summary table 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kGXeez ctOnEy"
    >
      <header
        className="sc-kpOJdX hlFKIM"
      >
        <h2
          className="sc-dxgOiQ isvEAp"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 600,
              }
            }
          >
            Performance
          </span>
        </h2>
      </header>
      <div
        className="sc-hSdWYo eaXZkb"
        id="js-dom-to-png-summary"
      >
        <ul
          className="sc-iAyFgw dtnEsI"
        >
          <li
            className="sc-gZMcBi kiZsK"
            width="25%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Tweets
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    150
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#2FD566"
                          transform="translate(1 2)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#2fd566",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        25
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi kiZsK"
            width="25%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Retweets
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    901
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        39
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi kiZsK"
            width="25%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Clicks
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    1,010
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        55
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi kiZsK"
            width="25%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Impressions
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    963.4k
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        26
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi kiZsK"
            width="25%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    New Followers
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    0
                  </span>
                </span>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi kiZsK"
            width="25%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Engagements
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    28.8k
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        33
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi kiZsK"
            width="25%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Likes
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    2,313
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        28
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi kiZsK"
            width="25%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Replies
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    658
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        9
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots SummaryTable should render the summary table with 5 metrics on one line 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kGXeez ctOnEy"
    >
      <header
        className="sc-kpOJdX hlFKIM"
      >
        <h2
          className="sc-dxgOiQ isvEAp"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 600,
              }
            }
          >
            Performance
          </span>
        </h2>
      </header>
      <div
        className="sc-hSdWYo eaXZkb"
        id="js-dom-to-png-summary"
      >
        <ul
          className="sc-iAyFgw dtnEsI"
        >
          <li
            className="sc-gZMcBi lmVtHy"
            width="20%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Tweets
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    150
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#2FD566"
                          transform="translate(1 2)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#2fd566",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        25
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi lmVtHy"
            width="20%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Retweets
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    901
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        39
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi lmVtHy"
            width="20%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Clicks
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    1,010
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        55
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi lmVtHy"
            width="20%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Impressions
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    963.4k
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        26
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi lmVtHy"
            width="20%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    New Followers
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    0
                  </span>
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots SummaryTable should render the summary table with 6 metrics on one line 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kGXeez ctOnEy"
    >
      <header
        className="sc-kpOJdX hlFKIM"
      >
        <h2
          className="sc-dxgOiQ isvEAp"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 600,
              }
            }
          >
            Performance
          </span>
        </h2>
      </header>
      <div
        className="sc-hSdWYo eaXZkb"
        id="js-dom-to-png-summary"
      >
        <ul
          className="sc-iAyFgw dtnEsI"
        >
          <li
            className="sc-gZMcBi iMUkLj"
            width="33%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Tweets
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    150
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#2FD566"
                          transform="translate(1 2)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#2fd566",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        25
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi iMUkLj"
            width="33%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Retweets
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    901
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        39
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi iMUkLj"
            width="33%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Comments
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    1,010
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        55
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi iMUkLj"
            width="33%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Clicks
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    1,010
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        55
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi iMUkLj"
            width="33%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Impressions
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    963.4k
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        26
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi iMUkLj"
            width="33%"
          >
            <div
              className="sc-VigVT kxLHnZ"
            >
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    New Followers
                  </span>
                </span>
              </span>
              <div
                className="sc-jTzLTM bCBUDo"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    0
                  </span>
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots Title should render title as if for app 1`] = `
<span>
  <h2
    className="sc-dxgOiQ isvEAp"
  >
    <span
      style={
        Object {
          "color": "#323b43",
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontSize": "1.25rem",
          "fontWeight": 600,
        }
      }
    >
      Performance
    </span>
  </h2>
</span>
`;

exports[`Snapshots Title should render title as if for report 1`] = `
<span>
  <h2
    className="sc-dxgOiQ isvEAp"
  >
    <span
      style={
        Object {
          "color": "#323b43",
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontSize": "1.25rem",
          "fontWeight": 600,
        }
      }
    >
      Performance
    </span>
  </h2>
</span>
`;
